updated styling, fixed double scroll

--- a/src/Components/InfoNode/InfoNode.module.css
+++ b/src/Components/InfoNode/InfoNode.module.css
@@ -1,8 +1,14 @@
 .smallBox {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    width: 100%;
-    height: 80%;
+    padding: 0 1rem;
+    gap: 1rem;
+}
+
+.smallBox p {
+    text-align: left;
+    flex: 1;
+
 }
