--- a/src/app/Dailies/Dailies.module.css
+++ b/src/app/Dailies/Dailies.module.css
@@ -1,39 +1,45 @@
+/* Comment out all current CSS when time allow and slowly remake responsivly */
+
+
 .mainBox {
     width: 100vw;
-    height: auto;
+    min-height: 85vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 .customGoals {
     display: flex;
     flex-direction: column;
     width: inherit;
-    height: 20vh;
+    height: 15vh;
     align-items: center;
     justify-content: space-around;
-    margin: auto;
 }
 
 .dailyParentBox {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 70vh;
-    justify-content: space-evenly;
+    /* height: 70vh; */
+    justify-content: space-between;
     margin-top: 1rem ;
 }
 
 .dailySection {
     width: 30%;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-between; */
     align-items: center;
     flex-direction: column;
+    gap: 1rem;
 }
+
+/* .dailySection:nth-child(1) {
+
+} */
 
 .bossSeperation {
     display: flex;
@@ -41,8 +47,13 @@
     flex-direction: row;
     justify-content: space-evenly;
     width: 100%;
+    height: inherit;
 }
 
 .splitBosses {
     width: 50%;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
